新增：结论总结节点

--- a/deploy/shardingsphere/conf/config-sharding.yaml
+++ b/deploy/shardingsphere/conf/config-sharding.yaml
@@ -1,39 +1,28 @@
 schemaName: dbops_proxy
 
 dataSources:
-  # 1. 交易中心
   ds_trade:
     url: jdbc:mysql://host.docker.internal:3306/corp_trade_center?serverTimezone=UTC&useSSL=false
     username: root
     password: 2679622408
     connectionTimeoutMilliseconds: 30000
     idleTimeoutMilliseconds: 60000
-    maxLifetimeMilliseconds: 1800000
     maxPoolSize: 50
-    minPoolSize: 1
-
-  # 2. 用户中心
   ds_user:
     url: jdbc:mysql://host.docker.internal:3306/corp_user_center?serverTimezone=UTC&useSSL=false
     username: root
     password: 2679622408
     maxPoolSize: 50
-
-  # 🔥🔥🔥 新增：3. 供应链/ERP
   ds_scm:
     url: jdbc:mysql://host.docker.internal:3306/corp_scm_erp?serverTimezone=UTC&useSSL=false
     username: root
     password: 2679622408
     maxPoolSize: 50
-
-  # 🔥🔥🔥 新增：4. 营销中心
   ds_mkt:
     url: jdbc:mysql://host.docker.internal:3306/corp_marketing?serverTimezone=UTC&useSSL=false
     username: root
     password: 2679622408
     maxPoolSize: 50
-
-  # 🔥🔥🔥 新增：5. 数据日志
   ds_log:
     url: jdbc:mysql://host.docker.internal:3306/corp_data_log?serverTimezone=UTC&useSSL=false
     username: root
@@ -41,45 +30,175 @@ dataSources:
     maxPoolSize: 50
 
 rules:
-- !SHARDING
-  tables:
-    # --- 交易分表规则 (保持不变) ---
-    t_order:
-      actualDataNodes: ds_trade.t_order_${000..127}
-      tableStrategy:
-        standard:
-          shardingColumn: oid
-          shardingAlgorithmName: t_order_inline
-      keyGenerateStrategy:
-        column: oid
-        keyGeneratorName: snowflake
+  - !SHARDING
+    tables:
+      # ==========================================
+      # 1. 核心业务表 (保持你原有的不变)
+      # ==========================================
+      t_order:
+        actualDataNodes: ds_trade.t_order_$->{(0..127).collect{it.toString().padLeft(3,'0')}}
+        tableStrategy:
+          standard:
+            shardingColumn: oid
+            shardingAlgorithmName: t_order_inline
+        keyGenerateStrategy:
+          column: oid
+          keyGeneratorName: snowflake
 
-    t_order_item:
-      actualDataNodes: ds_trade.t_order_item_${000..127}
-      tableStrategy:
-        standard:
-          shardingColumn: oid
-          shardingAlgorithmName: t_order_inline
+      t_order_item:
+        actualDataNodes: ds_trade.t_order_item_$->{(0..127).collect{it.toString().padLeft(3,'0')}}
+        tableStrategy:
+          standard:
+            shardingColumn: oid
+            shardingAlgorithmName: t_order_inline
+        keyGenerateStrategy:
+          column: id
+          keyGeneratorName: snowflake
 
-    # --- 用户分表规则 (保持不变) ---
-    u_user_base:
-      actualDataNodes: ds_user.u_user_base_${000..063}
-      tableStrategy:
-        standard:
-          shardingColumn: uid
-          shardingAlgorithmName: u_user_inline
+      t_pay_flow:
+        actualDataNodes: ds_trade.t_pay_flow_$->{(0..127).collect{it.toString().padLeft(3,'0')}}
+        tableStrategy:
+          standard:
+            shardingColumn: oid
+            shardingAlgorithmName: t_pay_flow_inline
 
-  shardingAlgorithms:
-    t_order_inline:
-      type: INLINE
-      props:
-        algorithm-expression: t_order_${String.format("%03d", oid % 128)}
-    u_user_inline:
-      type: INLINE
-      props:
-        algorithm-expression: u_user_base_${String.format("%03d", uid % 64)}
+      u_user_base:
+        actualDataNodes: ds_user.u_user_base_$->{(0..63).collect{it.toString().padLeft(3,'0')}}
+        tableStrategy:
+          standard:
+            shardingColumn: uid
+            shardingAlgorithmName: u_user_inline
+        keyGenerateStrategy:
+          column: uid
+          keyGeneratorName: snowflake
 
-  keyGenerators:
-    snowflake:
-      type: SNOWFLAKE
+      u_login_log:
+        actualDataNodes: ds_user.u_login_log_$->{(0..63).collect{it.toString().padLeft(3,'0')}}
+        tableStrategy:
+          standard:
+            shardingColumn: uid
+            shardingAlgorithmName: u_login_inline
+        keyGenerateStrategy:
+          column: id
+          keyGeneratorName: snowflake
 
+      log_api_access:
+        actualDataNodes: ds_log.log_api_access_2025W$->{(1..104).collect{it.toString().padLeft(3,'0')}}
+        tableStrategy:
+          standard:
+            shardingColumn: id
+            shardingAlgorithmName: log_week_inline_access
+        keyGenerateStrategy:
+          column: id
+          keyGeneratorName: snowflake
+
+      log_err_report:
+        actualDataNodes: ds_log.log_err_report_2025W$->{(1..104).collect{it.toString().padLeft(3,'0')}}
+        tableStrategy:
+          standard:
+            shardingColumn: id
+            shardingAlgorithmName: log_week_inline_err
+        keyGenerateStrategy:
+          column: id
+          keyGeneratorName: snowflake
+
+      # ==========================================
+      # 2. 🔥 缺失的维表规则 (对应 Python add_dim_tables) 🔥
+      # ==========================================
+      # 这些表在 Python 里是 0-49 分片，必须显式配置，否则 Agent 查不到逻辑表名
+
+      # [交易中心] trade_dim (000-049)
+      trade_dim:
+        actualDataNodes: ds_trade.trade_dim_$->{(0..49).collect{it.toString().padLeft(3,'0')}}
+        tableStrategy:
+          standard:
+            shardingColumn: id
+            shardingAlgorithmName: trade_dim_inline
+
+      # [用户中心] user_dim (000-049) -> 解决你刚才报错 user_dim missing 的问题
+      user_dim:
+        actualDataNodes: ds_user.user_dim_$->{(0..49).collect{it.toString().padLeft(3,'0')}}
+        tableStrategy:
+          standard:
+            shardingColumn: id
+            shardingAlgorithmName: user_dim_inline
+
+      # [供应链] scm_dim (000-049)
+      scm_dim:
+        actualDataNodes: ds_scm.scm_dim_$->{(0..49).collect{it.toString().padLeft(3,'0')}}
+        tableStrategy:
+          standard:
+            shardingColumn: id
+            shardingAlgorithmName: scm_dim_inline
+
+      # [营销中心] mkt_dim (000-049)
+      mkt_dim:
+        actualDataNodes: ds_mkt.mkt_dim_$->{(0..49).collect{it.toString().padLeft(3,'0')}}
+        tableStrategy:
+          standard:
+            shardingColumn: id
+            shardingAlgorithmName: mkt_dim_inline
+
+      # [日志中心] log_dim (000-049)
+      log_dim:
+        actualDataNodes: ds_log.log_dim_$->{(0..49).collect{it.toString().padLeft(3,'0')}}
+        tableStrategy:
+          standard:
+            shardingColumn: id
+            shardingAlgorithmName: log_dim_inline
+
+    # ==========================================
+    # 3. 算法定义
+    # ==========================================
+    shardingAlgorithms:
+      # 核心表算法
+      t_order_inline:
+        type: INLINE
+        props:
+          algorithm-expression: t_order_${(oid % 128).toString().padLeft(3,'0')}
+      t_pay_flow_inline:
+        type: INLINE
+        props:
+          algorithm-expression: t_pay_flow_${(oid % 128).toString().padLeft(3,'0')}
+      u_user_inline:
+        type: INLINE
+        props:
+          algorithm-expression: u_user_base_${(uid % 64).toString().padLeft(3,'0')}
+      u_login_inline:
+        type: INLINE
+        props:
+          algorithm-expression: u_login_log_${(uid % 64).toString().padLeft(3,'0')}
+      log_week_inline_access:
+        type: INLINE
+        props:
+          algorithm-expression: log_api_access_2025W${(id % 104 + 1).toString().padLeft(3,'0')}
+      log_week_inline_err:
+        type: INLINE
+        props:
+          algorithm-expression: log_err_report_2025W${(id % 104 + 1).toString().padLeft(3,'0')}
+
+      # 🔥🔥🔥 新增：维表算法 (全部模 50) 🔥🔥🔥
+      trade_dim_inline:
+        type: INLINE
+        props:
+          algorithm-expression: trade_dim_${(id % 50).toString().padLeft(3,'0')}
+      user_dim_inline:
+        type: INLINE
+        props:
+          algorithm-expression: user_dim_${(id % 50).toString().padLeft(3,'0')}
+      scm_dim_inline:
+        type: INLINE
+        props:
+          algorithm-expression: scm_dim_${(id % 50).toString().padLeft(3,'0')}
+      mkt_dim_inline:
+        type: INLINE
+        props:
+          algorithm-expression: mkt_dim_${(id % 50).toString().padLeft(3,'0')}
+      log_dim_inline:
+        type: INLINE
+        props:
+          algorithm-expression: log_dim_${(id % 50).toString().padLeft(3,'0')}
+
+    keyGenerators:
+      snowflake:
+        type: SNOWFLAKE
